<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="madeezi.newapp.BlockActivity"
    android:background="@color/haha2">

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/number"
        android:gravity="center"
        android:background="@android:color/white" />
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/number1"
        android:text="@string/add_number"
        android:onClick="set"
        android:textAllCaps="false"/>
    <TextView
        android:id="@+id/write1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/number1"
        android:hint="@string/write1"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@android:color/holo_blue_bright"
        />


</RelativeLayout>
